# Challenge-3

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  challenge_4_cite.ipynb  getversion.py  main.ipynb  main_mnist.html  main_mnist.ipynb  main_stocks.ipynb  pyproject.toml  rebuild.bat  setup.py  test.py  test_simple_layers.ipynb  version.h.in
broken/: Autoencoder.cpp  DeepAutoencoder.cpp  DenoisingAutoencoder.hpp  Variational.cpp  Variational.hpp  adam.cpp  validation.hpp
cmake/: config.cmake.in
debug/: debug.py  debug.sh  neuralnet.py  python-valgrind.supp
include/: Dynamic.hpp  DynamicEncoder.hpp  Model.hpp
include/autoencoder/: AutoEncoder.hpp
include/basic/: Activation.hpp  Layer.hpp  PySequence.hpp
include/convolutional/: Activation2D.hpp  Conv2D.hpp  Pool2D.hpp  PoolUnPool2D.hpp  Reshape.hpp  UNet.hpp  UnPool2D.hpp
include/datasource/: DataSource.hpp
include/loss/: BCE.hpp  IoU.hpp  L1.hpp  L2.hpp  Loss.hpp
include/normalize/: ReNorm2D.hpp
include/optimizers/: Adam.hpp  Clip.hpp  L1.hpp  L2.hpp  Optimizer.hpp
include/training/: Trainer.hpp
neuralnet.egg-info/: PKG-INFO  SOURCES.txt
pyneuralnet/: __init__.py  abstract.py  autoencoder.py  compound.py  convolution.py  fullconnect.py  loss.py  normalize.py  training.py
src/: Autoencoder.cpp  CoupledAutoencoder.cpp  DenoisingAutoencoder.cpp  Linear.cpp  Model.hpp  Network.cpp  NeuralNetwork.cpp  Optimizer.hpp  ReLU.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp  Training.cpp  Validation.cpp  Variational.cpp  autoencoder.hpp  bindings.cpp  layer.hpp  network.hpp  neuralnet.hpp  validation.hpp
src/autoencoder/: AutoEncoder.hpp  DeepAutoEncoder.hpp
src/basic/: Activation.hpp  Compound.hpp  Converter.hpp  Layer.hpp  Layer_impl.hpp  Linear.cpp  PySequence.hpp  ReLU.cpp  Sequence.cpp  Sequence.hpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
src/encoder/: Autoencoder.cpp  CoupledAutoencoder.cpp  DeepAutoencoder.cpp
src/include/: Autoencoder.hpp  CoupledAutoencoder.hpp  DeepAutoencoder.hpp  DeepVariational.hpp  Layer.hpp  Linear.hpp  Network.hpp  ReLU.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp  Variational.hpp
src/network/: ReLU.cpp  Sigmoid.cpp  Softmax.cpp
src/optimizers/: Adam.cpp  Adam.hpp  Optimizer.hpp
src/training/: Trainer.cpp  Trainer.hpp
test/: test_autoencoder.ipynb  test_convolutional.ipynb  test_deep_autoencoder.ipynb  test_kcae.py  test_neuralnetwork.py  test_pool.ipynb  test_simple_layers.ipynb  test_static_model.ipynb
