[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyneuralnet"
version = "2.0.0"

dependencies = [
]
requires-python = ">=3.11"
authors = [
    {name="Wyatt Barber", email="barberwy@mail.gvsu.edu"}
]
description = "Neural network models."